--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@ html {
 body {
     font-size: 1.6rem;
     font-family: "Roboto", sans-serif;
+    color: #636363;
+    line-height: 1.6;
 }
 
 /* Common:
@@ -41,9 +43,9 @@ a {
     ); */
     background-image: linear-gradient(
         to right,
-        #fc00ff 0%,
-        #00dbde 51%,
-        #fc00ff 100%
+        #f55f8d 0,
+        #f8ae56 51%,
+        #f55f8d 100%
     );
     text-align: center;
     border: 1px solid transparent;
@@ -59,6 +61,28 @@ a {
 
 .btn:hover {
     background-position: right center;
+}
+
+/* title common  */
+.sub-title {
+    font-weight: 600;
+    font-size: 2.2rem;
+    margin-bottom: 2rem;
+    color: #f55f8d;
+}
+
+.content-title {
+    font-size: 7rem;
+    line-height: 1.1;
+    font-weight: 800;
+    color: #262626;
+    margin-bottom: 2rem;
+}
+
+.desc {
+    font-size: 1.8rem;
+    margin-bottom: 1.5rem;
+    color: #636363;
 }
 
 /* ! HEADER */
@@ -130,9 +154,77 @@ a {
     background-size: 100%;
 }
 
-.sub-title {
-    font-weight: 600;
-    font-size: 2.2rem;
+.carousel-content {
+    display: flex;
+    align-items: center;
+}
+
+.carousel-left {
+    width: 60%;
+}
+
+.carousel-right {
+    width: 40%;
+}
+
+/*  carousel list  */
+.carousel__list {
     margin-bottom: 2rem;
-    color: #f55f8d;
+}
+
+.carousel__item {
+    padding: 10px 5px 10px 0;
+    color: #636363;
+}
+
+.carousel__item i {
+    width: 3.5rem;
+    height: 3.5rem;
+    border-radius: 50%;
+    text-align: center;
+    background-image: linear-gradient(
+        to right,
+        #f55f8d 0,
+        #f8ae56 51%,
+        #f55f8d 100%
+    );
+    line-height: 35px;
+    font-size: 24px;
+    color: #fff;
+    border-radius: 35px;
+    font-weight: 900;
+    background-size: 200%;
+    margin-right: 10px;
+}
+
+/* ! Services */
+
+.services {
+    padding-top: 11.5rem;
+    text-align: center;
+}
+
+.services-content {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+    margin-top: 40px;
+}
+
+.services__item {
+    border-radius: 0.5rem;
+    background: #fff;
+    box-shadow: 0 0 60px 0 rgba(0, 0, 0, 0.1);
+    padding: 3rem 4.5rem;
+    border: 3px solid transparent;
+}
+
+.services__img {
+    width: 215px;
+}
+.services__title {
+    margin: 1.5rem 0;
+    color: #262626;
+    font-size: 2.4rem;
+    font-weight: 500;
 }
