--- a/css/style.css
+++ b/css/style.css
@@ -267,3 +267,135 @@ a {
 .about__right {
     width: 50%;
 }
+
+.about__list {
+    margin-bottom: 3rem;
+}
+
+.btn__about {
+    margin-left: 0;
+}
+
+/* !number */
+
+.numb {
+    background-image: url(../imgs/bg14.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    padding: 8rem 0 5rem;
+}
+
+.numb-content {
+    display: flex;
+    justify-content: space-around;
+    /* align-items: center; */
+    text-align: center;
+}
+.numb__item {
+    width: 25%;
+}
+
+.numb__item i {
+    display: inline-block;
+    font-size: 4.5rem;
+    background-image: linear-gradient(
+        to right,
+        #f55f8d 0,
+        #f8ae56 51%,
+        #f55f8d 100%
+    );
+    border-radius: 50%;
+    text-align: center;
+    line-height: 80px;
+    background-size: 200%;
+    width: 80px;
+    height: 80px;
+    margin-bottom: 15px;
+    color: #fff;
+}
+
+.numb__item .numb__title {
+    font-size: 6.5rem;
+    font-weight: 800;
+    color: #f55f8d;
+    line-height: 1;
+}
+
+.numb__item .numb__desc {
+    color: #262626;
+    font-size: 2.5rem;
+}
+
+/* !features */
+
+.features {
+    padding-top: 11.5rem;
+    background-image: url(../imgs/bg2.png);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    overflow: hidden;
+}
+
+.features-content {
+    display: flex;
+}
+
+.features__left {
+    width: 50%;
+}
+
+.features__item {
+    margin: 0 50px 30px 0;
+    box-shadow: 0 0px 161px 0px rgb(0 0 0 / 10%);
+    padding: 30px;
+    background-color: #fff;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    position: relative;
+    overflow: hidden;
+}
+
+.features__item:nth-of-type(2) {
+    margin: 0 0 30px 50px;
+}
+
+.features__icon {
+    padding-right: 2.5rem;
+    font-size: 80px;
+    line-height: 1;
+    color: #f55f8d;
+    z-index: 1;
+    transition: all 1s;
+}
+
+.features__title {
+    font-weight: 800;
+    color: #262626;
+    font-size: 2.4rem;
+    transition: all 1s;
+}
+
+.features__right {
+    width: 50%;
+}
+
+.features__bg .features__img {
+    max-width: 100%;
+    animation: movie 5s infinite;
+}
+
+@keyframes movie {
+    0% {
+        transform: rotate(1deg) translate(2px, 2px);
+    }
+    50% {
+        transform: rotate(-1deg) translate(-2px, -2px);
+    }
+    100% {
+        transform: rotate(1deg) translate(2px, 2px);
+    }
+}
+
+/* !Portfolio */
