--- a/css/style.css
+++ b/css/style.css
@@ -355,6 +355,7 @@ a {
     align-items: center;
     position: relative;
     overflow: hidden;
+    transition: all 1s;
 }
 
 .features__item:nth-of-type(2) {
@@ -398,4 +399,142 @@ a {
     }
 }
 
+.features__item {
+    /* opacity: 0; */
+}
+
+.features__item:hover {
+    background-image: linear-gradient(
+        to right,
+        #f55f8d 0,
+        #f8ae56 51%,
+        #f55f8d 100%
+    );
+    background-size: 200%;
+    /* opacity: 1; */
+    transition: ease 1s;
+    color: #fff;
+}
+
+.features__item:hover .features__title,
+.features__item:hover .features__icon {
+    color: #fff;
+}
+
 /* !Portfolio */
+
+/* !blogs */
+
+.blogs {
+    padding: 11.5rem 0 5rem 0;
+    background-image: url(../imgs/bg16.png);
+    background-size: cover;
+    background-position: top center;
+    background-repeat: no-repeat;
+    text-align: center;
+}
+
+.blogs__item {
+    text-align: left;
+    background: rgba(245, 95, 141, 0.1);
+    border-radius: 8px;
+}
+
+.blogs__header {
+    position: relative;
+}
+
+.blogs__img {
+    width: 100%;
+    border-radius: 8px;
+}
+
+.blogs__day {
+    position: absolute;
+    bottom: -20px;
+    left: 12px;
+    background-image: linear-gradient(
+        to right,
+        #f55f8d 0,
+        #f8ae56 51%,
+        #f55f8d 100%
+    );
+    background-size: 200%;
+    border-radius: 6px;
+    padding: 10px 20px;
+    font-size: 1.4rem;
+    color: white;
+}
+
+.blogs__body {
+    padding: 30px 15px 20px;
+    line-height: 1.4;
+    margin-bottom: 20px;
+}
+
+.blogs__title {
+    font-size: 2.4rem;
+    font-weight: 700;
+    color: #262626;
+}
+
+.blogs__footer {
+    display: flex;
+    border-top: 1px solid rgba(0, 0, 0, 0.5);
+    padding: 15px;
+    text-transform: uppercase;
+    font-size: 1.4rem;
+    font-weight: 400;
+}
+
+.blogs__name {
+    padding: 0 20px 0 0;
+    align-items: center;
+}
+
+.blogs__name i,
+.blogs__comment i {
+    padding-right: 5px;
+    font-size: 2.2rem;
+    color: #f55f8d;
+
+    /* text-align: center; */
+}
+
+.blogs__name {
+    align-items: center;
+    line-height: 2.2rem;
+}
+
+/* ! Back to top */
+
+.backToTop {
+    position: fixed;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    right: 20px;
+    bottom: 15px;
+    padding: 5px;
+    opacity: 0;
+    border-radius: 8px;
+    box-shadow: -4px 4px 24px -10px #f55f8d;
+    background: #f55f8d;
+    color: white;
+    transition: all 0.2s;
+}
+
+.backToTop:hover {
+    opacity: 0.7;
+}
+
+.cd-top--is-visible {
+    visibility: visible;
+    opacity: 1;
+}
+
+.cd-top--fade-out {
+    opacity: 0.8;
+}
