--- a/css/style.css
+++ b/css/style.css
@@ -538,3 +538,199 @@ a {
 .cd-top--fade-out {
     opacity: 0.8;
 }
+
+/* !Footer */
+
+.footer {
+    background-image: url(../imgs/bg4.png);
+    display: block;
+    height: auto;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: #0e1b1f;
+    background-size: contain;
+    color: #fff;
+    font-size: 1.5rem;
+    position: relative;
+}
+
+/* .footer::before {
+    content: "";
+    background-image: url(../img/pattern2.png);
+    background-position: left top;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+} */
+
+.footer__top {
+    padding: 50px 60px;
+    background: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.1);
+    background-image: url(../imgs/pattern3.png);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
+}
+
+.footer__text,
+.footer__form {
+    width: 50%;
+}
+
+.footer__input {
+    display: flex;
+    border-radius: 1rem;
+    box-shadow: 0 0 60px 0 rgb(0, 0, 0, 0.1);
+}
+
+.btn-input {
+    padding: 20px 35px;
+    font-size: 2rem;
+    background-size: 200%;
+    border-color: transparent;
+    transition: all 0.5s;
+    border-radius: 0 0.5rem 0.5rem 0;
+    cursor: pointer;
+}
+
+.footer__input1 {
+    padding: 20px 20px;
+    font-size: 15px;
+    font-weight: 400;
+    color: #888;
+    background: #fff;
+    flex: auto;
+    border-radius: 0.5rem 0 0 0.5rem;
+    border: 1px solid #fff;
+    outline: none;
+    transition: all 0.5s;
+}
+
+.footer__title--content {
+    font-size: 2.8rem;
+    color: #262626;
+}
+
+.footer__bottom {
+    display: flex;
+    padding: 70px 0;
+}
+
+.footer__link {
+    font-size: 1.4rem;
+}
+
+.footer__item {
+    width: 25%;
+}
+
+.footer__contact li {
+    display: flex;
+}
+
+.footer__contact li a {
+    color: #fff;
+}
+
+.footer__contact i {
+    height: 4rem;
+    width: 4rem;
+    line-height: 4rem;
+    margin-right: 1rem;
+    text-align: center;
+    background: linear-gradient(to right, #f55f8d 0, #f8ae56 51%, #f55f8d 100%);
+    display: block;
+    border-radius: 5rem;
+    color: #fff;
+}
+
+.footer__item i {
+    font-weight: 700;
+    margin-right: 10px;
+}
+
+.footer__title {
+    font-size: 2.4rem;
+    font-weight: 700;
+    padding-bottom: 1rem;
+    margin-bottom: 3rem;
+    position: relative;
+    color: #fff;
+}
+
+.footer__title::before {
+    width: 1.5rem;
+    left: 0;
+}
+
+.footer__title::after {
+    width: 4.5rem;
+    left: 20px;
+}
+
+.footer__title::before,
+.footer__title::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    height: 4px;
+    border-radius: 20px;
+    background: linear-gradient(to right, #f55f8d 0, #f8ae56 51%, #f55f8d 100%);
+    background-size: 200%;
+}
+
+.footer__item li {
+    padding: 0.8rem;
+}
+
+.footer__item a {
+    color: #636363;
+    font-size: 1.6rem;
+    transition: all 0.5s;
+}
+
+.footer__item a:hover {
+    color: white;
+}
+
+/* !copyRight */
+
+.footer__copyright {
+    background-color: #1f343b;
+    padding: 10px 0;
+    position: relative;
+}
+
+.footer__content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.footer__left span {
+    color: #f55f8d;
+}
+
+.footer__right a {
+    height: 32px;
+    width: 32px;
+    line-height: 32px;
+    text-align: center;
+    display: inline-block;
+    border-radius: 50px;
+    font-size: 14px;
+    color: white;
+    background-color: rgba(255, 255, 255, 0.1);
+    transition: all 0.5s;
+}
+
+.footer__copyright a:hover {
+    background: #f55f8d;
+}
