--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
  */
 
 .container {
-    max-width: 1200px;
+    max-width: 1199px;
     margin: auto;
 }
 
@@ -539,11 +539,138 @@ a {
     opacity: 0.8;
 }
 
+/* !Portfolio */
+
+.portfolio {
+    background-image: url(../imgs/bg17.png);
+    background-size: cover;
+    background-position: top center;
+    /* background-repeat: no-repeat; */
+    text-align: center;
+    overflow: hidden;
+    padding-top: 11.5rem;
+}
+
+.portfolio-content {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr) 1.5fr;
+    gap: 35px;
+}
+
+.portfolio__item {
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+}
+.portfolio__item:hover::before {
+    left: 125%;
+}
+
+.portfolio__item:hover .portfolio__overlay {
+    opacity: 1;
+    transition: all 1s;
+}
+
+.portfolio__item::before {
+    content: "";
+    width: 50%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: -100%;
+    display: block;
+    background: linear-gradient(
+        to right,
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 0.3) 100%
+    );
+
+    transform: skewX(-25deg);
+    transition: all 0.75s;
+}
+
+.portfolio__item:first-child {
+    grid-column: 1 / span 2;
+}
+
+.portfolio__item:nth-of-type(5) {
+    grid-column: 1 / span 2;
+}
+
+.portfolio__item:last-child {
+    grid-column: 3 / 4;
+    grid-row: 2 / 4;
+}
+
+.portfolio__img {
+    width: 100%;
+    height: 100%;
+}
+
+.portfolio__overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    opacity: 0;
+    transition: all 0.75s;
+}
+.portfolio__icon {
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    font-size: 28px;
+    color: #fff;
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    background: linear-gradient(to right, #f55f8d 0, #f8ae56 51%, #f55f8d 100%);
+    background-size: 200%;
+    border-radius: 10px;
+    transform: translate(20px, -20px);
+    transition: all 0.75s;
+}
+
+.portfolio__icon a {
+    color: #fff;
+}
+
+.portfolio__text {
+    /* position: absolute;
+    bottom: 30px;
+    left: 30px;
+    text-align: left;
+    transform: translateY(150px);
+    transition: all 0.75s; */
+
+    position: absolute;
+    bottom: 105px;
+    left: 30px;
+    text-align: left;
+    transform: translateY(81px);
+    transition: all 0.75s ease 0s;
+    color: #fff;
+}
+
+.portfolio__icon i {
+}
+
+.portfolio__title {
+    font-size: 2.2rem;
+    font-weight: 800;
+}
+
+.features__desc {
+    opacity: 0.7;
+}
+
 /* !Footer */
 
 .footer {
     background-image: url(../imgs/bg4.png);
-    display: block;
+    /* display: block; */
     height: auto;
     background-repeat: no-repeat;
     background-position: center;
@@ -552,12 +679,13 @@ a {
     color: #fff;
     font-size: 1.5rem;
     position: relative;
+    z-index: 1;
 }
 
-/* .footer::before {
+.footer::before {
     content: "";
-    background-image: url(../img/pattern2.png);
-    background-position: left top;
+    background-image: url(../imgs/pattern2.png);
+    background-position: center top;
     background-repeat: no-repeat;
     background-size: contain;
     position: absolute;
@@ -565,7 +693,8 @@ a {
     left: 0;
     width: 100%;
     height: 100%;
-} */
+    z-index: -1;
+}
 
 .footer__top {
     padding: 50px 60px;
